[gd_scene load_steps=13 format=3 uid="uid://dsp2p7xh4p2h6"]

[ext_resource type="Texture2D" uid="uid://d258gfumlh2le" path="res://Assets/Map.png" id="1_pq3jv"]
[ext_resource type="Script" path="res://Scenes/Sections.gd" id="2_h5f0c"]
[ext_resource type="PackedScene" uid="uid://deowvldewp0oo" path="res://Objects/Section.tscn" id="3_x8bth"]
[ext_resource type="Texture2D" uid="uid://snnhyknlkcb8" path="res://Assets/Cloud.png" id="4_uaeqy"]
[ext_resource type="Texture2D" uid="uid://dni226hjr4wue" path="res://Assets/Lock.png" id="5_168ih"]
[ext_resource type="Script" path="res://Scripts/SectionButton.gd" id="6_37dr3"]
[ext_resource type="Texture2D" uid="uid://b5qaov1p5x80v" path="res://Assets/PlayerMarker.png" id="7_iphde"]
[ext_resource type="Script" path="res://Scripts/Inventory.gd" id="8_qm5b6"]
[ext_resource type="Script" path="res://Scripts/TextPanel.gd" id="9_73efi"]
[ext_resource type="PackedScene" uid="uid://djb22ldrvecd6" path="res://Objects/MusicVol.tscn" id="10_bpey4"]
[ext_resource type="PackedScene" uid="uid://bpxijoi8nht8e" path="res://Objects/SoundVol.tscn" id="11_hidpb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ispqw"]
bg_color = Color(0.258824, 0.188235, 0.14902, 1)

[node name="Main Area" type="Node2D"]

[node name="Map" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_pq3jv")

[node name="Sections" type="Node2D" parent="."]
visible = false
script = ExtResource("2_h5f0c")

[node name="FinalBoss" parent="Sections" instance=ExtResource("3_x8bth")]
position = Vector2(820, 120)

[node name="TextureRect" type="TextureRect" parent="Sections/FinalBoss"]
offset_left = -210.0
offset_top = -167.0
offset_right = -10.0
offset_bottom = 13.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect2" type="TextureRect" parent="Sections/FinalBoss"]
offset_left = -63.0
offset_top = -174.0
offset_right = 137.0
offset_bottom = 6.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect3" type="TextureRect" parent="Sections/FinalBoss"]
offset_left = -9.0
offset_top = -129.0
offset_right = 191.0
offset_bottom = 51.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect4" type="TextureRect" parent="Sections/FinalBoss"]
offset_left = -165.0
offset_top = -125.0
offset_right = 35.0
offset_bottom = 55.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect5" type="TextureRect" parent="Sections/FinalBoss"]
offset_left = -36.0
offset_top = -92.0
offset_right = 164.0
offset_bottom = 88.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect6" type="TextureRect" parent="Sections/FinalBoss"]
offset_left = -158.0
offset_top = -79.0
offset_right = 42.0
offset_bottom = 101.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect7" type="TextureRect" parent="Sections/FinalBoss"]
offset_left = -172.0
offset_top = -37.0
offset_right = 28.0
offset_bottom = 143.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect8" type="TextureRect" parent="Sections/FinalBoss"]
offset_left = -70.0
offset_top = -25.0
offset_right = 130.0
offset_bottom = 155.0
rotation = -0.261799
texture = ExtResource("4_uaeqy")

[node name="BossGuards" parent="Sections" instance=ExtResource("3_x8bth")]
position = Vector2(974, 274)

[node name="TextureRect" type="TextureRect" parent="Sections/BossGuards"]
offset_left = -118.0
offset_top = -174.0
offset_right = 82.0
offset_bottom = 6.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect2" type="TextureRect" parent="Sections/BossGuards"]
offset_left = -40.0
offset_top = -194.0
offset_right = 160.0
offset_bottom = -14.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect3" type="TextureRect" parent="Sections/BossGuards"]
offset_left = -29.0
offset_top = -142.0
offset_right = 171.0
offset_bottom = 38.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect4" type="TextureRect" parent="Sections/BossGuards"]
offset_left = -116.0
offset_top = -127.0
offset_right = 84.0
offset_bottom = 53.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect5" type="TextureRect" parent="Sections/BossGuards"]
offset_left = -113.0
offset_top = -79.0
offset_right = 87.0
offset_bottom = 101.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect6" type="TextureRect" parent="Sections/BossGuards"]
offset_left = -52.0
offset_top = -114.0
offset_right = 148.0
offset_bottom = 66.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect7" type="TextureRect" parent="Sections/BossGuards"]
offset_left = -148.0
offset_top = -14.0
offset_right = 52.0
offset_bottom = 166.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect8" type="TextureRect" parent="Sections/BossGuards"]
offset_left = -16.0
offset_top = -31.0
offset_right = 184.0
offset_bottom = 149.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect9" type="TextureRect" parent="Sections/BossGuards"]
offset_left = -102.0
offset_top = -45.0
offset_right = 98.0
offset_bottom = 135.0
texture = ExtResource("4_uaeqy")

[node name="TextureRect10" type="TextureRect" parent="Sections/BossGuards"]
offset_left = -6.0
offset_top = -79.0
offset_right = 194.0
offset_bottom = 101.0
texture = ExtResource("4_uaeqy")

[node name="ExitRoom" type="Button" parent="Sections/BossGuards"]
offset_left = -162.0
offset_top = -35.0
offset_right = -40.0
offset_bottom = 6.0
text = "Leave Room"
script = ExtResource("6_37dr3")
toname = "BossHallway"

[node name="BossHallway" parent="Sections" instance=ExtResource("3_x8bth")]

[node name="Cloud" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 731.0
offset_top = 125.0
offset_right = 931.0
offset_bottom = 305.0
texture = ExtResource("4_uaeqy")

[node name="Cloud2" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 783.0
offset_top = 179.0
offset_right = 983.0
offset_bottom = 359.0
texture = ExtResource("4_uaeqy")

[node name="Cloud3" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 709.0
offset_top = 172.0
offset_right = 909.0
offset_bottom = 352.0
texture = ExtResource("4_uaeqy")

[node name="Cloud4" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 720.0
offset_top = 227.0
offset_right = 920.0
offset_bottom = 407.0
texture = ExtResource("4_uaeqy")

[node name="Cloud5" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 641.0
offset_top = 213.0
offset_right = 841.0
offset_bottom = 393.0
texture = ExtResource("4_uaeqy")

[node name="Cloud6" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 666.0
offset_top = 265.0
offset_right = 866.0
offset_bottom = 445.0
texture = ExtResource("4_uaeqy")

[node name="Cloud7" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 614.0
offset_top = 307.0
offset_right = 814.0
offset_bottom = 487.0
texture = ExtResource("4_uaeqy")

[node name="Cloud8" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 580.0
offset_top = 255.0
offset_right = 780.0
offset_bottom = 435.0
texture = ExtResource("4_uaeqy")

[node name="Cloud9" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 605.0
offset_top = 348.0
offset_right = 805.0
offset_bottom = 528.0
texture = ExtResource("4_uaeqy")

[node name="Cloud10" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 611.0
offset_top = 407.0
offset_right = 811.0
offset_bottom = 587.0
rotation = -0.0989532
texture = ExtResource("4_uaeqy")

[node name="Cloud11" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 717.0
offset_top = 319.0
offset_right = 917.0
offset_bottom = 499.0
rotation = -0.0989532
texture = ExtResource("4_uaeqy")

[node name="Cloud12" type="TextureRect" parent="Sections/BossHallway"]
offset_left = 754.0
offset_top = 344.0
offset_right = 954.0
offset_bottom = 524.0
rotation = 0.261799
texture = ExtResource("4_uaeqy")

[node name="EnterRoom" type="Button" parent="Sections/BossHallway"]
offset_left = 850.0
offset_top = 238.0
offset_right = 972.0
offset_bottom = 279.0
text = "Enter Room"
script = ExtResource("6_37dr3")
toname = "BossGuards"

[node name="EnterRoom2" type="Button" parent="Sections/BossHallway"]
offset_left = 763.0
offset_top = 170.0
offset_right = 885.0
offset_bottom = 211.0
text = "Enter Room"
script = ExtResource("6_37dr3")
toname = "FinalBoss"

[node name="LockedTreasury" parent="Sections" instance=ExtResource("3_x8bth")]
position = Vector2(565, 198)

[node name="Cloud" type="TextureRect" parent="Sections/LockedTreasury"]
offset_left = -180.0
offset_top = -162.0
offset_right = 20.0
offset_bottom = 18.0
texture = ExtResource("4_uaeqy")

[node name="Cloud2" type="TextureRect" parent="Sections/LockedTreasury"]
offset_left = -39.0
offset_top = -156.0
offset_right = 161.0
offset_bottom = 24.0
texture = ExtResource("4_uaeqy")

[node name="Cloud3" type="TextureRect" parent="Sections/LockedTreasury"]
offset_left = -180.0
offset_top = -109.0
offset_right = 20.0
offset_bottom = 71.0
texture = ExtResource("4_uaeqy")

[node name="Cloud4" type="TextureRect" parent="Sections/LockedTreasury"]
offset_left = -25.0
offset_top = -111.0
offset_right = 175.0
offset_bottom = 69.0
texture = ExtResource("4_uaeqy")

[node name="Cloud5" type="TextureRect" parent="Sections/LockedTreasury"]
offset_left = -33.0
offset_top = -74.0
offset_right = 167.0
offset_bottom = 106.0
texture = ExtResource("4_uaeqy")

[node name="Cloud6" type="TextureRect" parent="Sections/LockedTreasury"]
offset_left = -149.0
offset_top = -66.0
offset_right = 51.0
offset_bottom = 114.0
texture = ExtResource("4_uaeqy")

[node name="Cloud7" type="TextureRect" parent="Sections/LockedTreasury"]
offset_left = -136.0
offset_top = -26.0
offset_right = 64.0
offset_bottom = 154.0
texture = ExtResource("4_uaeqy")

[node name="Cloud8" type="TextureRect" parent="Sections/LockedTreasury"]
offset_left = -75.0
offset_top = 4.0
offset_right = 125.0
offset_bottom = 184.0
texture = ExtResource("4_uaeqy")

[node name="Cloud10" type="TextureRect" parent="Sections/LockedTreasury"]
offset_left = 24.0
offset_top = -43.0
offset_right = 224.0
offset_bottom = 137.0
texture = ExtResource("4_uaeqy")

[node name="ExitTreasury" type="Button" parent="Sections/LockedTreasury"]
offset_left = -58.0
offset_top = 56.0
offset_right = 64.0
offset_bottom = 97.0
text = "Leave Treasury"
script = ExtResource("6_37dr3")
toname = "FoodHall"

[node name="TreasuryKey" parent="Sections" instance=ExtResource("3_x8bth")]
position = Vector2(548, 505)
unlocks = NodePath("../FoodHall")

[node name="Cloud" type="TextureRect" parent="Sections/TreasuryKey"]
offset_left = -37.0
offset_top = -75.0
offset_right = 163.0
offset_bottom = 105.0
texture = ExtResource("4_uaeqy")

[node name="Cloud2" type="TextureRect" parent="Sections/TreasuryKey"]
offset_left = -121.0
offset_top = -46.0
offset_right = 79.0
offset_bottom = 134.0
texture = ExtResource("4_uaeqy")

[node name="Cloud3" type="TextureRect" parent="Sections/TreasuryKey"]
offset_left = -148.0
offset_top = -90.0
offset_right = 52.0
offset_bottom = 90.0
texture = ExtResource("4_uaeqy")

[node name="Cloud4" type="TextureRect" parent="Sections/TreasuryKey"]
offset_left = -42.0
offset_top = -125.0
offset_right = 158.0
offset_bottom = 55.0
texture = ExtResource("4_uaeqy")

[node name="Cloud5" type="TextureRect" parent="Sections/TreasuryKey"]
offset_left = -103.0
offset_top = -132.0
offset_right = 97.0
offset_bottom = 48.0
texture = ExtResource("4_uaeqy")

[node name="ExitRoom" type="Button" parent="Sections/TreasuryKey"]
offset_left = -56.0
offset_top = -91.0
offset_right = 66.0
offset_bottom = -50.0
text = "Leave Room"
script = ExtResource("6_37dr3")
toname = "FoodHall"

[node name="Kitchens" parent="Sections" instance=ExtResource("3_x8bth")]
position = Vector2(367, 298)

[node name="Cloud2" type="TextureRect" parent="Sections/Kitchens"]
offset_left = -103.0
offset_top = -125.0
offset_right = 97.0
offset_bottom = 55.0
texture = ExtResource("4_uaeqy")
flip_h = true

[node name="Cloud" type="TextureRect" parent="Sections/Kitchens"]
offset_left = -104.0
offset_top = -94.0
offset_right = 96.0
offset_bottom = 86.0
texture = ExtResource("4_uaeqy")

[node name="ExitKitchens" type="Button" parent="Sections/Kitchens"]
offset_left = -59.0
offset_top = 38.0
offset_right = 63.0
offset_bottom = 79.0
text = "Leave Kitchens"
script = ExtResource("6_37dr3")
toname = "FoodHall"

[node name="FoodHall" parent="Sections" instance=ExtResource("3_x8bth")]
position = Vector2(377, 419)

[node name="Lock" type="TextureRect" parent="Sections/FoodHall"]
offset_left = 144.0
offset_top = -100.0
offset_right = 214.0
offset_bottom = -60.0
texture = ExtResource("5_168ih")

[node name="Cloud" type="TextureRect" parent="Sections/FoodHall"]
offset_left = -209.0
offset_top = -1236.0
offset_right = 972.0
offset_bottom = 653.0
texture = ExtResource("4_uaeqy")

[node name="GoSouth" type="Button" parent="Sections/FoodHall"]
offset_left = -65.0
offset_top = 75.0
offset_right = 52.0
offset_bottom = 116.0
text = "Go South"
script = ExtResource("6_37dr3")
toname = "WaterEntrance"

[node name="EnterKitchens" type="Button" parent="Sections/FoodHall"]
offset_left = -70.0
offset_top = -124.0
offset_right = 47.0
offset_bottom = -83.0
text = "Enter Kitchens"
script = ExtResource("6_37dr3")
toname = "Kitchens"

[node name="Unlock" type="Button" parent="Sections/FoodHall"]
offset_left = 124.0
offset_top = -134.0
offset_right = 244.0
offset_bottom = -93.0
text = "Enter Treasury"
script = ExtResource("6_37dr3")
toname = "LockedTreasury"

[node name="TreasuryKey" type="Button" parent="Sections/FoodHall"]
offset_left = 114.0
offset_top = 15.0
offset_right = 236.0
offset_bottom = 56.0
text = "Enter Room"
script = ExtResource("6_37dr3")
toname = "TreasuryKey"

[node name="GoEast" type="Button" parent="Sections/FoodHall"]
offset_left = 235.0
offset_top = -34.0
offset_right = 357.0
offset_bottom = 7.0
text = "Go East"
script = ExtResource("6_37dr3")
toname = "BossHallway"

[node name="WaterEntrance" parent="Sections" instance=ExtResource("3_x8bth")]
position = Vector2(366, 566)

[node name="Cloud" type="TextureRect" parent="Sections/WaterEntrance"]
offset_left = -180.0
offset_top = -407.0
offset_right = 393.0
offset_bottom = 361.0
texture = ExtResource("4_uaeqy")
metadata/_edit_use_anchors_ = true

[node name="Cloud2" type="TextureRect" parent="Sections/WaterEntrance"]
offset_left = -190.0
offset_top = -531.0
offset_right = 322.0
offset_bottom = 237.0
texture = ExtResource("4_uaeqy")
metadata/_edit_use_anchors_ = true

[node name="Cloud3" type="TextureRect" parent="Sections/WaterEntrance"]
offset_left = 212.0
offset_top = -857.0
offset_right = 724.0
offset_bottom = -89.0
rotation = 1.0472
texture = ExtResource("4_uaeqy")
metadata/_edit_use_anchors_ = true

[node name="GoNorth" type="Button" parent="Sections/WaterEntrance"]
offset_left = -40.0
offset_top = -101.0
offset_right = 77.0
offset_bottom = -60.0
text = "Go North"
script = ExtResource("6_37dr3")
toname = "FoodHall"

[node name="ArmoryHall" parent="Sections" instance=ExtResource("3_x8bth")]
position = Vector2(53, 132)

[node name="Cloud" type="TextureRect" parent="Sections/ArmoryHall"]
offset_left = -77.0
offset_top = -202.0
offset_right = 123.0
offset_bottom = -22.0
texture = ExtResource("4_uaeqy")

[node name="Cloud2" type="TextureRect" parent="Sections/ArmoryHall"]
offset_left = -18.0
offset_top = -161.0
offset_right = 182.0
offset_bottom = 19.0
texture = ExtResource("4_uaeqy")

[node name="Cloud3" type="TextureRect" parent="Sections/ArmoryHall"]
offset_left = -111.0
offset_top = -154.0
offset_right = 89.0
offset_bottom = 26.0
texture = ExtResource("4_uaeqy")

[node name="Cloud4" type="TextureRect" parent="Sections/ArmoryHall"]
offset_left = -88.0
offset_top = -116.0
offset_right = 112.0
offset_bottom = 64.0
texture = ExtResource("4_uaeqy")

[node name="Cloud5" type="TextureRect" parent="Sections/ArmoryHall"]
offset_left = -92.0
offset_top = -71.0
offset_right = 108.0
offset_bottom = 109.0
texture = ExtResource("4_uaeqy")

[node name="Cloud6" type="TextureRect" parent="Sections/ArmoryHall"]
offset_left = -43.0
offset_top = -50.0
offset_right = 157.0
offset_bottom = 130.0
texture = ExtResource("4_uaeqy")

[node name="Cloud7" type="TextureRect" parent="Sections/ArmoryHall"]
offset_left = -111.0
offset_top = -20.0
offset_right = 89.0
offset_bottom = 160.0
texture = ExtResource("4_uaeqy")

[node name="GoRiver" type="Button" parent="Sections/ArmoryHall"]
offset_left = -50.0
offset_top = -111.0
offset_right = 67.0
offset_bottom = -70.0
text = "Enter Boat"
script = ExtResource("6_37dr3")
toname = "WaterEntrance"

[node name="GoSouth" type="Button" parent="Sections/ArmoryHall"]
offset_left = -59.0
offset_top = 104.0
offset_right = 58.0
offset_bottom = 145.0
text = "Go South"
script = ExtResource("6_37dr3")
toname = "PreArmory"

[node name="GuardHouse" parent="Sections" instance=ExtResource("3_x8bth")]
position = Vector2(194, 267)
unlocks = NodePath("../PreArmory")

[node name="Cloud" type="TextureRect" parent="Sections/GuardHouse"]
offset_left = -81.0
offset_top = -151.0
offset_right = 119.0
offset_bottom = 29.0
texture = ExtResource("4_uaeqy")

[node name="Cloud3" type="TextureRect" parent="Sections/GuardHouse"]
offset_left = -59.0
offset_top = -71.0
offset_right = 141.0
offset_bottom = 109.0
texture = ExtResource("4_uaeqy")

[node name="Cloud2" type="TextureRect" parent="Sections/GuardHouse"]
offset_left = -75.0
offset_top = -113.0
offset_right = 125.0
offset_bottom = 67.0
texture = ExtResource("4_uaeqy")

[node name="Leave" type="Button" parent="Sections/GuardHouse"]
offset_left = -54.0
offset_top = 25.0
offset_right = 63.0
offset_bottom = 66.0
text = "Leave Room"
script = ExtResource("6_37dr3")
toname = "PreArmory"

[node name="PreArmory" parent="Sections" instance=ExtResource("3_x8bth")]
position = Vector2(112, 296)

[node name="Lock" type="TextureRect" parent="Sections/PreArmory"]
offset_left = -99.0
offset_top = -70.0
offset_right = -29.0
offset_bottom = -30.0
texture = ExtResource("5_168ih")

[node name="Cloud" type="TextureRect" parent="Sections/PreArmory"]
offset_left = -335.0
offset_top = -897.0
offset_right = 323.0
offset_bottom = 407.0
texture = ExtResource("4_uaeqy")

[node name="GoSouth" type="Button" parent="Sections/PreArmory"]
offset_left = -59.0
offset_top = 79.0
offset_right = 58.0
offset_bottom = 120.0
text = "Go South"
script = ExtResource("6_37dr3")
toname = "Start"

[node name="EnterDoor" type="Button" parent="Sections/PreArmory"]
offset_left = 28.0
offset_top = -34.0
offset_right = 163.0
offset_bottom = 7.0
text = "Enter Room"
script = ExtResource("6_37dr3")
toname = "GuardHouse"

[node name="Unlock" type="Button" parent="Sections/PreArmory"]
offset_left = -126.0
offset_top = -107.0
offset_right = 9.0
offset_bottom = -66.0
text = "Go North"
script = ExtResource("6_37dr3")
toname = "ArmoryHall"

[node name="Start" parent="Sections" instance=ExtResource("3_x8bth")]
position = Vector2(110, 474)

[node name="Cloud" type="TextureRect" parent="Sections/Start"]
offset_left = -77.0
offset_top = -355.0
offset_right = 123.0
offset_bottom = -175.0
texture = ExtResource("4_uaeqy")

[node name="GoNorth" type="Button" parent="Sections/Start"]
offset_left = -59.0
offset_top = -133.0
offset_right = 58.0
offset_bottom = -92.0
text = "Go North"
script = ExtResource("6_37dr3")
toname = "PreArmory"

[node name="Player" type="Marker2D" parent="Sections"]

[node name="TextureRect" type="TextureRect" parent="Sections/Player"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_iphde")
expand_mode = 1
stretch_mode = 4

[node name="Timer" type="Timer" parent="Sections"]
wait_time = 0.01
one_shot = true
autostart = true

[node name="UI" type="Node2D" parent="."]

[node name="FadeOut" type="ColorRect" parent="UI"]
visible = false
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.533333)

[node name="Buttons" type="Panel" parent="UI"]
offset_left = 1064.0
offset_top = 13.0
offset_right = 1280.0
offset_bottom = 393.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ispqw")

[node name="InventoryButton" type="Button" parent="UI/Buttons"]
layout_mode = 0
offset_top = 18.0
offset_right = 216.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 24
text = "Inventory"
metadata/showing = false

[node name="TextButton" type="Button" parent="UI/Buttons"]
layout_mode = 0
offset_top = 87.0
offset_right = 216.0
offset_bottom = 138.0
theme_override_font_sizes/font_size = 24
text = "Location Text"
metadata/showing = false

[node name="Label" type="Label" parent="UI/Buttons"]
layout_mode = 0
offset_top = 306.0
offset_right = 216.0
offset_bottom = 372.0
theme_override_font_sizes/font_size = 20
text = "Press a button again to close its menu"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="Inventory" type="Panel" parent="UI"]
visible = false
offset_left = 135.0
offset_top = 13.0
offset_right = 1056.0
offset_bottom = 686.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ispqw")
script = ExtResource("8_qm5b6")

[node name="ItemList" type="ItemList" parent="UI/Inventory"]
clip_contents = false
layout_mode = 0
offset_left = 7.0
offset_top = 158.0
offset_right = 450.0
offset_bottom = 665.0
theme_override_font_sizes/font_size = 20
item_count = 3
item_0/text = "Key"
item_1/text = "Car"
item_2/text = "Mouse"

[node name="Description" type="RichTextLabel" parent="UI/Inventory"]
layout_mode = 0
offset_left = 461.0
offset_top = 160.0
offset_right = 915.0
offset_bottom = 665.0
theme_override_font_sizes/normal_font_size = 20

[node name="Label" type="Label" parent="UI/Inventory"]
layout_mode = 0
offset_right = 921.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 32
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="UI/Inventory"]
layout_mode = 0
offset_left = 7.0
offset_top = 66.0
offset_right = 921.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 20
text = "Select an item to see a description of it
Double-click an item to use it"
horizontal_alignment = 1

[node name="TextPanel" type="Panel" parent="UI"]
visible = false
offset_left = 135.0
offset_top = 13.0
offset_right = 1056.0
offset_bottom = 686.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ispqw")
script = ExtResource("9_73efi")

[node name="RoomName" type="Label" parent="UI/TextPanel"]
layout_mode = 0
offset_right = 921.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 32
text = "<Loc Text>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="UI/TextPanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 61.0
offset_right = 915.0
offset_bottom = 583.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true

[node name="Button" type="Button" parent="UI/TextPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -71.0
offset_right = 84.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Continue"

[node name="MusicVol" parent="." instance=ExtResource("10_bpey4")]
offset_left = 1096.0
offset_top = 256.0
offset_right = 1146.0
offset_bottom = 306.0

[node name="SoundVol" parent="." instance=ExtResource("11_hidpb")]
offset_left = 1189.0
offset_top = 255.0
offset_right = 1239.0
offset_bottom = 305.0

[connection signal="timeout" from="Sections/Timer" to="Sections" method="_on_timer_timeout"]
[connection signal="pressed" from="UI/Buttons/InventoryButton" to="UI/Inventory" method="_on_inventory_button_pressed"]
[connection signal="pressed" from="UI/Buttons/TextButton" to="UI/TextPanel" method="_on_text_button_pressed"]
[connection signal="item_activated" from="UI/Inventory/ItemList" to="UI/Inventory" method="_on_item_list_item_activated"]
[connection signal="item_selected" from="UI/Inventory/ItemList" to="UI/Inventory" method="_on_item_list_item_selected"]
[connection signal="pressed" from="UI/TextPanel/Button" to="Sections" method="_on_continuebutton_pressed"]
[connection signal="pressed" from="UI/TextPanel/Button" to="UI/TextPanel" method="_on_closebutton_pressed"]
